source/stylesheets/all.scss
// = require normalize
// = require _foundation_custom
@import "includes";
@import "gh-fork-ribbon";
@import "webicons";


//default classes
.default-row{
    @include grid-row();
}

.inner-wrapper-full{
    @include grid-column(12);
}


/* ie9 fix for svg */
.ie9 img[src*=".svg"] {
  width: 100%; 
}
/* 2 */
@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
  img[src*=".svg"] {
    width: 100%; 
  }
}
/* end IE9 fix for svg */

body {
    //padding-top: 50px;
    //padding-bottom: 20px;
    //height:100%;
    position: relative;
    //@include hardware_accelerate;
}

//background canvas
#bg-canvas{
    position:fixed; 
    top:0;
    left:0;
    z-index: -1000;
    @include hardware_accelerate;
    //-webkit-backface-visibility: hidden;
//backface-visibility: hidden;
  /* background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAI0lEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggXAAmiCIAEgQAAE4FBbECyZcAAAAASUVORK5CYII=) #222; */
//background: url('<%= image_path('bg.jpg'); %>') no-repeat center center fixed;
  background: url(image-path('diamonds.png')) repeat;
  //-webkit-background-size: cover;
  //-moz-background-size: cover;
  //-o-background-size: cover;
  //background-size: cover;
  
}


//navbar
#top-nav-cont{
    border-bottom: 1px solid rgba(0,0,0,0.6);
    //@include hardware_accelerate;
}

main{
    //margin-top: 45px;
}

.top-bar{
    //text-shadow: none; //kinda choppy with it on
    //@include hw_accelerate; //fix choppiness

}

.navbar-header{
    //
}

.title-area{
    //padding-left: $column-gutter/2;
}

.header-logo{
    //display:block;
    //margin-top: 10px;
    //margin-left: 15px;
    //margin-right: 15px;
    .logo{
        //width: 30px;
        
        /*
        #tag_group {
            fill: #2A2F38;
        }
        */
    }
}


//HOME:
//
//home header

.jumbotron{
    //@include grid-row();
    //background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAI0lEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggXAAmiCIAEgQAAE4FBbECyZcAAAAASUVORK5CYII=) #222;
//background-color: transparent;
//background-image: repeating-linear-gradient(-45deg, transparent, transparent 5px, rgba(0,0,0,.8) 5px, rgba(0,0,0,.8) 6px);

  
  @include home_bg;
  

  color: rgba(255, 255, 255, 0.8);
  position: relative;
  margin-bottom: 2rem;
  //padding-bottom:10px;
  //&::before{ 
      //position:absolute;
      //bottom:0;
      //@include triangle(bottom,white,10px); 
  //}
  
  .header-container{
      
      padding: 1em 0;
      .header-inner{
          //@include grid-column(12);
      }
      //@include grid-column(12);
  }
}

//home about

.about-list{
    
    h2{
        text-align: center;
    }
}

.about-item{
    //@include make-md-column(4);
    //padding: 1em 0;
    @include grid-column(12);
    
    
    .heading-icon{ //assumed to be svg
        height:170px;
    }
}
/*
.twitter-section{
    text-align: center;
    padding: 0 $column-gutter/2;
}
*/

.footer-divider{
    border: 1px dashed rgba(136,136,136,0.5);
}

.footer-cont{
    
    .footer-wrapper{
        //@include grid-column(12);
    }
}

@media #{$small-only} {
    .github-fork-ribbon-wrapper{
        display:none;
    }
}

//tablet and up
@media #{$medium-up} {
    .about-item{
      @include grid-column(4);
    }
}


//emojis
span.delicious:after{
    content:'\1F60B\1F374';
}

span.bread:after{
    content:'\1F35E';
}

span.custard:after{
    content:'\1F36E';
}

span.keyboard-wrapper{
    span{
        display: none;
    }
    &:after{
        content:'\2328';
        
    }
}

img.bottom-computer{
    height: 1rem;
    vertical-align: baseline;
    //background-image: url(image-path('gnome-computer.svg'));
}

.svg-heading{
    display: inline-block;
    vertical-align: middle;
}

/*
span.current-year{
    display: none;
}
*/

//no more IE8 or below plz
.browserupgrade {
    //margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 25% 0;
}

.under-construction{
    img{
        width: 5em;
    }
    font-size: 2em;
    //font-weight: bold;
}

